# supply-ops-sre-capstone

./: .gitignore
.github/workflows/: deploy.yml
infra/helm/supply-api/: Chart.yaml  values.yaml
infra/helm/supply-api/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
infra/helm/supply-worker/: Chart.yaml  values.yaml
infra/helm/supply-worker/templates/: _helpers.tpl  deployment.yaml  service.yaml
infra/terraform/: eks.tf  iam.tf  import.sh  main.tf  networking.tf  outputs.tf  rds_ecr.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
observability/: grafana-dashboard-configmap.yaml  install-monitoring.sh  kube-prometheus-stack-values.yaml  service-monitors.yaml  slo-rules.yaml
platform/sql/: schema.sql
scripts/: bootstrap.sh  generate-events.sh  generate_events.py  teardown.sh
services/supply_api/: Dockerfile  pyproject.toml
services/supply_api/app/: db.py  logger.py  main.py  metrics.py  models.py  routes.py  telemetry.py
services/supply_worker/: Dockerfile  pyproject.toml
services/supply_worker/worker/: db.py  main.py  metrics.py  telemetry.py
